style: change product images object-fit to contain to prevent side cropping

--- a/style.css
+++ b/style.css
@@ -1388,7 +1388,7 @@ a {
 .product-img-box img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: var(--transition-smooth);
 }
 
@@ -2220,7 +2220,7 @@ a {
 .gallery-main-img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: opacity 0.25s ease-in-out, transform 0.4s ease-in-out;
 }
 
